--- a/core/src/main/flex/org/dukecon/views/StreamView.mxml
+++ b/core/src/main/flex/org/dukecon/views/StreamView.mxml
@@ -4,7 +4,6 @@
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:comp="org.dukecon.components.*"
         xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{resourceManager.getString('dukecon', 'stream.title')}"
         creationComplete="onCreationComplete(event)">
@@ -14,36 +13,27 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:FastInject>
+        <parsley:FastInject injectionComplete="init()">
             <parsley:Inject property="eventService" type="{EventService}" />
-            <parsley:Inject property="streamService" type="{StreamService}" />
+            <parsley:Inject property="resourceService" type="{ResourceService}" />
         </parsley:FastInject>
     </fx:Declarations>
 
     <fx:Script>
         <![CDATA[
-      import mx.collections.ArrayCollection;
       import mx.events.FlexEvent;
 
       import org.dukecon.events.ListEvent;
       import org.dukecon.model.Track;
       import org.dukecon.services.EventService;
-      import org.dukecon.services.StreamService;
+      import org.dukecon.services.ResourceService;
       import org.dukecon.utils.I18nHelper;
 
-      [Bindable]
       protected var stream:Track;
-
-      [Bindable]
-      protected var streamIcon:Class;
-      [Bindable]
-      protected var streamName:String;
-
-      [Bindable]
-      protected var events:ArrayCollection;
+      protected var _initialized:Boolean = false;
 
       public var eventService:EventService;
-      public var streamService:StreamService;
+      public var resourceService:ResourceService;
 
       protected function onCreationComplete(event:FlexEvent):void {
         talkList.addEventListener(ListEvent.ITEM_SELECTED, onStreamSelected);
@@ -60,21 +50,25 @@
         update();
       }
 
-      override protected function commitProperties():void {
-        super.commitProperties();
-        update();
+      protected function init():void {
+          _initialized = true;
+          update();
       }
 
       protected function update():void {
-        if (stream && eventService) {
-          streamName = I18nHelper.getName(stream.names, resourceManager.localeChain[0]);
-          streamIcon = streamService.getIconForStream(stream.id);
-          events = eventService.getEventsForStream(stream);
-        } else {
-          streamIcon = null;
-          streamName = null;
-          events = null;
-        }
+          if(!_initialized) {
+              return;
+          }
+
+          if (stream && eventService && resourceService) {
+              streamIcon.source = resourceService.getIconForStream(stream.id);
+              streamNameLabel.text = I18nHelper.getName(stream.names, resourceManager.localeChain[0]);
+              talkList.dataProvider = eventService.getEventsForStream(stream);
+          } else {
+              streamIcon.source = null;
+              streamNameLabel.text = null;
+              talkList.dataProvider = null;
+          }
       }
 
       protected function onStreamSelected(event:ListEvent):void {
@@ -96,7 +90,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{streamName}" top="22" left="20" width="440" styleName="title"/>
+                <s:Label id="streamNameLabel" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
@@ -107,11 +101,10 @@
                     </s:stroke>
                 </s:Rect>
 
-                <comp:VectorImage source="{streamIcon}" top="22" right="22" width="116" height="116"/>
+                <s:Image id="streamIcon" top="22" right="22" width="116" height="116"/>
             </s:Group>
             <s:List id="talkList" width="100%" height="100%"
-                    itemRenderer="org.dukecon.itemrenderer.EventItemRenderer"
-                    dataProvider="{events}"/>
+                    itemRenderer="org.dukecon.itemrenderer.EventItemRenderer"/>
         </s:VGroup>
     </s:Scroller>
 
