- Made the settings persistence work.

--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -44,6 +44,7 @@
             var settingsService:SettingsService = SettingsService(context.getObjectByType(SettingsService));
             if (settingsService) {
                 settingsService.installedLanguages = resourceManager.localeChain;
+                settingsService.loadSettings();
             }
         }
 
