- Made sure the ScheduleDayView isn't destroyed when displaying a detail view, so we remain at the old location when coming back.

--- a/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
@@ -6,6 +6,7 @@
         xmlns:s="library://ns.adobe.com/flex/spark"
         xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{formattedDate}"
+        destructionPolicy="never"
         creationComplete="onCreationComplete(event)">
 
     <fx:Declarations>
