--- a/core/src/main/flex/org/dukecon/views/LocationsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationsView.mxml
@@ -12,7 +12,10 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:FastInject injectionComplete="init();" property="locationService" type="{LocationService}" />
+        <parsley:FastInject injectionComplete="init();">
+            <parsley:Inject property="locationService" type="{LocationService}" />
+            <parsley:Inject property="settingsService" type="{SettingsService}" />
+        </parsley:FastInject>
     </fx:Declarations>
 
     <fx:Script>
@@ -22,14 +25,14 @@
         import org.dukecon.events.ConferenceDataChangedEvent;
         import org.dukecon.events.ListEvent;
         import org.dukecon.services.LocationService;
+        import org.dukecon.services.SettingsService;
 
         [Bindable]
         protected var listData:ArrayCollection;
 
-        [Inject]
         public var locationService:LocationService;
+        public var settingsService:SettingsService;
 
-        [Init]
         public function init():void {
             listData = locationService.locations;
             list.addEventListener(ListEvent.ITEM_SELECTED, onLocationSelected)
@@ -45,6 +48,10 @@
         }
         ]]>
     </fx:Script>
+
+    <s:navigationContent>
+        <s:Button label="&lt;" click="{settingsService.selectedConference = null}"/>
+    </s:navigationContent>
 
     <s:List id="list" width="100%" height="100%"
             itemRenderer="org.dukecon.itemrenderer.LocationItemRenderer"
