--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -14,6 +14,7 @@
     <fx:Declarations>
         <parsley:FastInject injectionComplete="init();">
             <parsley:Inject property="conferenceService" type="{ConferenceService}"/>
+            <parsley:Inject property="settingsService" type="{SettingsService}" />
         </parsley:FastInject>
     </fx:Declarations>
 
@@ -31,6 +32,7 @@
         protected var listData:ArrayCollection;
 
         public var conferenceService:ConferenceService;
+        public var settingsService:SettingsService;
 
         public function init():void {
             listData = conferenceService.days;
@@ -47,6 +49,10 @@
         }
         ]]>
     </fx:Script>
+
+    <s:navigationContent>
+        <s:Button label="&lt;" click="{settingsService.selectedConference = null}"/>
+    </s:navigationContent>
 
     <s:List id="list" width="100%" height="100%"
             itemRenderer="org.dukecon.itemrenderer.ScheduleDayItemRenderer"
