--- a/core/src/main/flex/org/dukecon/views/StreamsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/StreamsView.mxml
@@ -12,7 +12,10 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:FastInject injectionComplete="init();" property="streamService" type="{StreamService}" />
+        <parsley:FastInject injectionComplete="init();">
+            <parsley:Inject property="streamService" type="{StreamService}" />
+            <parsley:Inject property="settingsService" type="{SettingsService}" />
+        </parsley:FastInject>
     </fx:Declarations>
 
     <fx:Script>
@@ -21,13 +24,14 @@
 
       import org.dukecon.events.ConferenceDataChangedEvent;
       import org.dukecon.events.ListEvent;
+      import org.dukecon.services.SettingsService;
       import org.dukecon.services.StreamService;
 
       [Bindable]
       protected var listData:ArrayCollection;
 
-      [Inject]
       public var streamService:StreamService;
+      public var settingsService:SettingsService;
 
       [Init]
       public function init():void {
@@ -45,6 +49,10 @@
       }
       ]]>
     </fx:Script>
+
+    <s:navigationContent>
+        <s:Button label="&lt;" click="{settingsService.selectedConference = null}"/>
+    </s:navigationContent>
 
     <s:List id="list" width="100%" height="100%" horizontalScrollPolicy="off"
             itemRenderer="org.dukecon.itemrenderer.StreamItemRenderer"
